--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hudoro/accordion",
-  "version": "0.0.1-beta.10",
+  "version": "0.0.1-beta.11",
   "description": "Accordion component for Hudoro UI",
   "author": "Prawito Hudoro",
   "main": "dist/accordion.umd.js",
@@ -22,10 +22,7 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+ 
   "devDependencies": {
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
@@ -34,7 +31,9 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
-    "vite-plugin-dts": "^3.7.1"
+    "vite-plugin-dts": "^3.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "peerDependencies": {
     "react": ">=17.0.0",
